# pdeu-conf-chapter-03

./: .gitignore  TASKS.md  audit_agent.py  pyproject.toml
docs/superpowers/plans/: 2026-05-15-infinite-loop-charting.md  2026-05-15-pelican-bicycle-plan.md  2026-05-15-rubiks-cube-plan.md
docs/superpowers/specs/: 2026-05-15-infinite-loop-charting-design.md  2026-05-15-pelican-bicycle-design.md  2026-05-15-rubiks-cube-design.md
rubiks/: app.js  index.html  style.css
tests/: test_chapter_03.py
