[project]
name = "pdeu-conf-chapter-03"
version = "0.1.0"
description = "DeepAgents workshop chapter repo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.6.1",
    "fastmcp>=2.14.1",
    "langchain-openrouter>=0.2.3",
    "loguru>=0.7.3",
    "matplotlib>=3.10.0",
    "pandas>=3.0.3",
    "pydantic>=2.12.0",
    "pytest>=9.0.0",
    "python-dotenv>=1.2.2",
    "seaborn>=0.13.2",
]
